<?xml version="1.0" encoding="utf-8"?>
<!-- TODO Using ConstraintLayout
     android:textAppearance="?android:attr/textAppearanceSmall" for TextViews
     style="@style/Base.TextAppearance.AppCompat.Headline" for EditTexts
     style="@style/Widget.AppCompat.Button.Borderless" for Buttons
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_margin">


    <TextView
        android:id="@+id/lblBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/bill"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBill"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusedByDefault="true"
        android:inputType="numberDecimal|number"
        android:selectAllOnFocus="true"
        android:text="@string/defaultCost"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/eur"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBill" />

    <TextView
        android:id="@+id/eur"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/eur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBill" />

    <TextView
        android:id="@+id/percentage"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/perc"
        android:layout_marginRight="@dimen/main_inter_margin"
        app:layout_constraintStart_toEndOf="@+id/txtPercentage"
        app:layout_constraintTop_toBottomOf="@+id/txtBill" />

    <TextView
        android:id="@+id/tipPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="12dp"
        android:text="@string/tipPerc"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBill" />

    <EditText
        android:id="@+id/txtTip"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:ems="10"
        android:text="@string/defaultCost"
        android:focusable="false"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/eur2"
        app:layout_constraintEnd_toStartOf="@+id/eur2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/percentage" />

    <EditText
        android:id="@+id/txtPercentage"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal|number"
        android:text="@string/defaultPercentage"
        android:selectAllOnFocus="true"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTip"
        app:layout_constraintEnd_toStartOf="@+id/percentage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/eur2"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/eur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eur" />


    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/totalText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTip" />

    <EditText
        android:id="@+id/txtTotal"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:text="@string/defaultCost"
        android:textAlignment="textEnd"
        android:focusable="false"
        app:layout_constraintEnd_toStartOf="@+id/eur"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTip" />

    <TextView
        android:id="@+id/eur4"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/eur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eur2" />

    <Button
        android:id="@+id/btnResetTip"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotal" />

    <TextView
        android:id="@+id/lblDiners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/diners"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toStartOf="@+id/lblPerDiner"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotal" />

    <EditText
        android:id="@+id/txtPerDiner"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:ems="10"
        android:text="@string/defaultCost"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/eur5"
        app:layout_constraintStart_toEndOf="@+id/txtDiners"
        app:layout_constraintTop_toBottomOf="@+id/lblPerDiner" />

    <EditText
        android:id="@+id/txtDiners"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/defaultDiners"
        android:selectAllOnFocus="true"
        android:textAlignment="textEnd"
        android:layout_marginRight="@dimen/main_inter_margin"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPerDiner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblPerDiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/perDiner"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toTopOf="@+id/txtPerDiner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetTip" />

    <TextView
        android:id="@+id/eur5"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/eur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eur4" />

    <EditText
        android:id="@+id/txtPerDinerRounded"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:ems="10"
        android:text="@string/defaultCost"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/eur"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRounded" />

    <TextView
        android:id="@+id/eur6"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/eur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtPerDinerRounded"
        app:layout_constraintTop_toBottomOf="@+id/eur5" />

    <TextView
        android:id="@+id/lblRounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/rounded"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toTopOf="@+id/txtPerDinerRounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPerDiner"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnResetDiners"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPerDinerRounded" />


</androidx.constraintlayout.widget.ConstraintLayout>


